--- a/index.html
+++ b/index.html
@@ -4,8 +4,14 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Love running. Club for runners in Dublin, Ireland. Urban running, trail running. Dublin dockland and Phoenix Park">
-    <meta name="keywords" content="love running, run, running club, runners, Ireland, Dublin, sport, exercise">
+    <meta
+      name="description"
+      content="Love running. Club for runners in Dublin, Ireland. Urban running, trail running. Dublin dockland and Phoenix Park"
+    />
+    <meta
+      name="keywords"
+      content="love running, run, running club, runners, Ireland, Dublin, sport, exercise"
+    />
     <title>Love Running</title>
     <!-- Favicon -->
     <link
@@ -26,5 +32,9 @@
       href="assets/favicon/favicon-16x16.png"
     />
   </head>
-  <body></body>
+  <body>
+    <header>Header</header>
+    <main>Main Content</main>
+    <footer>Footer</footer>
+  </body>
 </html>
