--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
       name="keywords"
       content="love running, run, running club, runners, Ireland, Dublin, sport, exercise"
     />
+    <!-- Title -->
     <title>Love Running</title>
     <!-- Favicon -->
     <link
@@ -31,10 +32,15 @@
       sizes="16x16"
       href="assets/favicon/favicon-16x16.png"
     />
+    <!-- Stylesheet -->
+    <link rel="stylesheet" href="assets/css/style.css" />
   </head>
   <body>
+    <!-- Header -->
     <header>Header</header>
+    <!-- Main content -->
     <main>Main Content</main>
+    <!-- Footer -->
     <footer>Footer</footer>
   </body>
 </html>
