Move css file to css folder

--- a/index.html
+++ b/index.html
@@ -33,13 +33,14 @@
       href="assets/favicon/favicon-16x16.png"
     />
     <!-- Stylesheet -->
-    <link rel="stylesheet" href="assets/css/style.css" />
+    <link rel="stylesheet" href="assets/css/style.css">
+  
   </head>
   <body>
     <!-- Header -->
     <header>Header</header>
     <!-- Main content -->
-    <main>Main Content</main>
+    <main>Main Content - check if html updates</main>
     <!-- Footer -->
     <footer>Footer</footer>
   </body>
