Reset test header text to original

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <!-- Header -->
     <header>Header</header>
     <!-- Main content -->
-    <main>Main Content - check if html updates</main>
+    <main>Main Content</main>
     <!-- Footer -->
     <footer>Footer</footer>
   </body>
