--- a/index.html
+++ b/index.html
@@ -55,6 +55,10 @@
     <!-- Main content -->
     <main>Main Content</main>
     <!-- Footer -->
-    <footer>Footer</footer>
+    <footer><ul>
+        <li><a href="https://www.facebook.com" target="_blank" rel="noopener" aria-label="Visit our Facebook page (opens in a new tab)"><i class="fa-brands fa-facebook"></i></a></li>
+    </ul></footer>
+    <!-- Font Awesome kit -->
+    <script src="https://kit.fontawesome.com/ad02dcfcb8.js" crossorigin="anonymous"></script>
   </body>
 </html>
