--- a/sign-up.html
+++ b/sign-up.html
@@ -35,6 +35,7 @@
     <!-- Stylesheet -->
     <link rel="stylesheet" href="assets/css/style.css" />
   </head>
+
   <body>
     <!-- Header -->
     <header>
@@ -47,14 +48,14 @@
       ></label>
       <nav>
         <ul id="menu">
-          <li><a href="index.html" class="active">Home</a></li>
+          <li><a href="index.html">Home</a></li>
           <li><a href="gallery.html">Gallery</a></li>
-          <li><a href="sign-up.html">Sign Up</a></li>
+          <li><a href="sign-up.html" class="active">Sign Up</a></li>
         </ul>
       </nav>
     </header>
     <!-- Main content -->
-    <main><section id="hero"></section></main>
+    <main>Main Content</main>
     <!-- Footer -->
     <footer>
       <ul id="social-networks">
