--- a/index.html
+++ b/index.html
@@ -91,6 +91,13 @@
             low mood, and inspire you to try new events.</p>
             </div>
         </div>
+        <div id="benefits-image">
+            <div id="circle-cover-bg">
+
+            </div>
+        </div>
+
+        </div>
 
     </div>
 
