--- a/sign-up.html
+++ b/sign-up.html
@@ -55,7 +55,41 @@
       </nav>
     </header>
     <!-- Main content -->
-    <main>Main Content</main>
+    <main>
+        <!-- Sign-up form -->
+        <section id="signup">
+<form action="http://formdump.codeinstitute.net" method="post" id="signup-form">
+    <h2><i class="fa-solid fa-heart-pulse"></i> Let's get you signed up!</h2>
+<label for="first_name">First Name</label>
+<input type="text" id="first_name" name="first_name" required>
+<br>
+<label for="last_name">Last Name</label>
+<input type="text" id="last_name" name="last_name" required>
+<br>
+<label for="email_address">Email Address</label>
+<input type="text" id="email_address" name="email_address" required>
+<br>
+<!-- Radio buttons -->
+<div class="radio-buttons" name="running_preference" required>
+    <div>
+    <label for="road">Road</label>
+<input type="radio" name="running_preference" value="road" checked>
+    </div>
+    <div>
+        <label for="trail">Trail</label>
+        <input type="radio" name="running_preference" value="trail">
+    </div>
+    <div>
+        <label for="both">Both</label>
+        <input type="radio" name="running_preference" value="both">
+    </div>
+
+</div>
+<!-- Submit Button -->
+<input type="submit" class="join-button" value="Let's Run!">
+</form>
+        </section> 
+    </main>
     <!-- Footer -->
     <footer>
       <ul id="social-networks">
