--- a/sign-up.html
+++ b/sign-up.html
@@ -61,27 +61,27 @@
 <form action="http://formdump.codeinstitute.net" method="post" id="signup-form">
     <h2><i class="fa-solid fa-heart-pulse"></i> Let's get you signed up!</h2>
 <label for="first_name">First Name</label>
-<input type="text" id="first_name" name="first_name" required>
+<input type="text" id="first_name" name="first_name" class="text-input" required>
 <br>
 <label for="last_name">Last Name</label>
-<input type="text" id="last_name" name="last_name" required>
+<input type="text" id="last_name" name="last_name" class="text-input" required>
 <br>
 <label for="email_address">Email Address</label>
-<input type="text" id="email_address" name="email_address" required>
+<input type="text" id="email_address" name="email_address" class="text-input" required>
 <br>
 <!-- Radio buttons -->
-<div class="radio-buttons" name="running_preference" required>
+<div class="radio-buttons">
     <div>
     <label for="road">Road</label>
-<input type="radio" name="running_preference" value="road" checked>
+<input type="radio" name="running_preference" value="road" required checked>
     </div>
     <div>
         <label for="trail">Trail</label>
-        <input type="radio" name="running_preference" value="trail">
+        <input type="radio" name="running_preference" value="trail" required>
     </div>
     <div>
         <label for="both">Both</label>
-        <input type="radio" name="running_preference" value="both">
+        <input type="radio" name="running_preference" value="both" required>
     </div>
 
 </div>
