--- a/index.html
+++ b/index.html
@@ -1,13 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Love running. Club for runners in Dublin, Ireland. Urban running, trail running. Dublin dockland and Phoenix Park"
-    />
-    <meta name="keywords" content="love running, run, running club, runners, Ireland, Dublin, sport, exercise"
-    />
+    <meta charset="UTF-8"/> <meta http-equiv="X-UA-Compatible" content="IE=edge"/> <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <meta name="description" content="Love running. Club for runners in Dublin, Ireland. Urban running, trail running. Dublin dockland and Phoenix Park"/>
+    <meta name="keywords" content="love running, run, running club, runners, Ireland, Dublin, sport, exercise"/>
     <!-- Title -->
     <title>Love Running</title>
     <!-- Favicon -->
@@ -15,17 +11,16 @@
     <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon/favicon-32x32.png"/>
     <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon/favicon-16x16.png"/>
     <!-- Stylesheet -->
-    <link rel="stylesheet" href="assets/css/style.css" />
-  </head>
+    <link rel="stylesheet" href="assets/css/style.css"/>
+ </head>
   <body>
     <!-- Header -->
     <header>
       <a href="index.html">
         <h1 id="logo">Love Running</h1>
       </a>
-      <input type="checkbox" id="nav-toggle" name="nav-toggle" />
-      <label for="nav-toggle" class="nav-toggle-label"
-        ><i class="fa-solid fa-bars"></i
+      <input type="checkbox" id="nav-toggle" name="nav-toggle"/>
+      <label for="nav-toggle" class="nav-toggle-label"><i class="fa-solid fa-bars"></i
       ></label>
       <nav>
         <ul id="menu">
@@ -80,9 +75,6 @@
         </div>
 
         </div>
-
-    </div>
-
 </section>
 <!-- Meetup times section -->
 <section id="meetups">
